<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_baseline_location_on"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tabelapreco"
            android:icon="@drawable/ic_baseline_list_alt"
            android:title="@string/menu_slidepreco" />
    </group>

</menu>